--- a/academiaWeb/pom.xml
+++ b/academiaWeb/pom.xml
@@ -5,12 +5,14 @@
   <artifactId>academiaWeb</artifactId>
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
+  
   <name>academiaWeb Maven Webapp</name>
   <url>http://maven.apache.org</url>
     <properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<version.spring>4.0.9.RELEASE</version.spring>
 		<version.spring.security>3.2.3.RELEASE</version.spring.security>
+		 <apachetiles.version>3.0.5</apachetiles.version>
 </properties>
 <dependencies>
 		<dependency>
@@ -27,9 +29,9 @@
 		</dependency>
 	<!-- https://mvnrepository.com/artifact/postgresql/postgresql -->
 		<dependency>
-	    	<groupId>postgresql</groupId>
-	    	<artifactId>postgresql</artifactId>
-	    	<version>9.1-901.jdbc4</version>
+    		<groupId>org.postgresql</groupId>
+    		<artifactId>postgresql</artifactId>
+    		<version>42.2.5</version>
 		</dependency>
 		<dependency>
 	    	<groupId>org.apache.logging.log4j</groupId>
@@ -53,10 +55,10 @@
 	        <version>${version.spring.security}</version>
 	    </dependency>
 	    <dependency>
-	            <groupId>org.springframework.security</groupId>
-	            <artifactId>spring-security-config</artifactId>
-	            <version>${version.spring.security}</version>
-	        </dependency>
+	        <groupId>org.springframework.security</groupId>
+	        <artifactId>spring-security-config</artifactId>
+	        <version>${version.spring.security}</version>
+	    </dependency>
 	    <dependency>
 	    	<groupId>org.springframework.security</groupId>
 	    	<artifactId>spring-security-taglibs</artifactId>
@@ -92,6 +94,27 @@
 	    	<groupId>org.hibernate.validator</groupId>
 	    	<artifactId>hibernate-validator-annotation-processor</artifactId>
 	    	<version>6.0.2.Final</version>
+		</dependency>
+		<!-- Apache Tiles -->
+        <dependency>
+            <groupId>org.apache.tiles</groupId>
+            <artifactId>tiles-core</artifactId>
+            <version>${apachetiles.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tiles</groupId>
+            <artifactId>tiles-api</artifactId>
+            <version>${apachetiles.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tiles</groupId>
+            <artifactId>tiles-servlet</artifactId>
+            <version>${apachetiles.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tiles</groupId>
+            <artifactId>tiles-jsp</artifactId>
+            <version>${apachetiles.version}</version>
 		</dependency>
 </dependencies>
 	<build>
